--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,10 +42,13 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+        Recycle.mjb est une association créée par de jeunes étudiant.e.s dans 
+        divers domaines et ayant pour objectif principal la réduction de l’empreinte 
+        écologique de l’individu par la formation et la transmission de savoir et 
+        savoir-faire hétéroclite et homogène. Aﬁn d’atteindre cet objectif, 
+        nous avons mis en place diﬀérents lieux d’accueil/ateliers ouverts aux 
+        membres de l‘association. Hebdomadairement, nous y donnons des formations 
+        aﬁn d’acquérir de nouvelles connaissances de bases et techniques
       </p>
       <p>
         Read the blog posts or check
