--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,22 +42,12 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        Recycle.mjb est une association créée par de jeunes étudiant.e.s dans 
-        divers domaines et ayant pour objectif principal la réduction de l’empreinte 
+        Recycle.mjb est une association avec objectif principal la réduction de l’empreinte 
         écologique de l’individu par la formation et la transmission de savoir et 
         savoir-faire hétéroclite et homogène. Aﬁn d’atteindre cet objectif, 
         nous avons mis en place diﬀérents lieux d’accueil/ateliers ouverts aux 
         membres de l‘association. Hebdomadairement, nous y donnons des formations 
         aﬁn d’acquérir de nouvelles connaissances de bases et techniques
-      </p>
-      <p>
-        Read the blog posts or check
-        <LinkButton
-          className="underline decoration-dashed underline-offset-4 hover:text-skin-accent"
-          href="https://github.com/satnaing/astro-paper#readme"
-        >
-          README
-        </LinkButton> for more info.
       </p>
       {
         // only display if at least one social link is enabled
