--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Hr from "./Hr.astro";
 import LinkButton from "./LinkButton.astro";
 
 export interface Props {
-  activeNav?: "posts" | "tags" | "about" | "search";
+  activeNav?: "posts" | "agenda" | "about" | "search";
 }
 
 const { activeNav } = Astro.props;
@@ -61,8 +61,8 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
-            <a href="/tags/" class={activeNav === "tags" ? "active" : ""}>
-              Tags
+            <a href="/agenda/" class={activeNav === "agenda" ? "active" : ""}>
+              Agenda
             </a>
           </li>
           <li>
